# Game-Engine-Programming

./: .gitignore
KeiiEngine/: CMakeLists.txt  CMakeLists.txt.bak  Generate.bat  Generate_FromHome.bat  Generate_FromUniversity.bat
KeiiEngine/contrib/PhysX-4.1/lib/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
KeiiEngine/contrib/stb/: stb_vorbis.h
KeiiEngine/game/: OpenGLFlow.txt  shaderprogram.glsl
KeiiEngine/game/- materials/: default_green.material  default_material.material  shulk_clothing.material
KeiiEngine/game/- materials/colours/: blue.material  red.material
KeiiEngine/game/- materials/entities/kraid/: kraid_body.material  kraid_special.material
KeiiEngine/game/- materials/entities/samus/: eye_LL.material  metal_gun.material  metal_morph.material  metal_samus.material  missile.material  samus_emi.material  super_missile.material
KeiiEngine/game/- materials/entities/shulk/: boots.material  clothing.material  eye.material  hair.material  metal_decals.material  monado.material  skin.material
KeiiEngine/game/- materials/enviroments/gaur_plains/: bridge_metal.material  bridge_wood.material  chiseled_stone_1.material  chiseled_stone_2.material  chiseled_stone_3.material  chiseled_stone_4.material  chiseled_stone_5.material  chiseled_stone_6.material  chiseled_stone_7.material  chiseled_stone_8.material  foliage.material  grass.material  ore.material  rocky_1.material  rocky_2.material  rocky_3.material  rocky_4.material  sky.material  tree_1.material  tree_2.material  (+7 more)
KeiiEngine/game/- materials/gaur_plains/: bridge_metal.material  bridge_wood.material  chiseled_stone_1.material  chiseled_stone_2.material  chiseled_stone_3.material  chiseled_stone_4.material  chiseled_stone_5.material  chiseled_stone_6.material  chiseled_stone_7.material  chiseled_stone_8.material  foliage.material  grass.material  ore.material  rocky_1.material  rocky_2.material  rocky_3.material  rocky_4.material  sky.material  tree_1.material  tree_2.material  tree_3.material  vines.material  water_1.material  water_2.material  water_3.material  waterfall.material  waves.material
KeiiEngine/game/- materials/monado/: dark_gold.material  glow.material  gold.material  red_metal.material  red_metal_core.material
KeiiEngine/game/- materials/shulk/: boots.material  clothing.material  eye.material  hair.material  metal_decals.material  monado.material  skin.material
KeiiEngine/game/- materials/skybox/: clear_sky.material  cloudy_sky.material  night_sky.material  sky.material
KeiiEngine/game/- models/: cube.fbx  monado.fbx  non-unwrapped_cube.fbx  quad.fbx  quad_2.fbx  shulk.fbx  skybfox.fbx  test.fbx  unwrapped_cube.fbx
KeiiEngine/game/- models/entities/: kraid.fbx  missile.fbx  samus.fbx  super_missile.fbx
KeiiEngine/game/- models/enviroments/: gaur_plains.fbx  result_stage.fbx
KeiiEngine/game/- shaders/: buffer_shader_shader.glsl  default_shader_program.glsl  gizmo_shader_program.glsl  old_shader.glsl  shader_program.glsl  shader_program_Phong.glsl  simpleprogram.glsl  transparency_shader.glsl
KeiiEngine/game/- shaders/- PBR/: shader_program_PBR-Torrance-Sparrow-Model.glsl  shader_program_PBR-Torranec-Sparrow-Model.glsl  shader_program_PBR-Transparency.glsl  shader_program_PBR.glsl
KeiiEngine/game/- shaders/- Post Processing/: buffer_shader_shader.glsl  buffer_shader_shader_inverted.glsl
KeiiEngine/game/- shaders/- Unlit/: shader_program_Unlit-Transparency.glsl  shader_program_Unlit.glsl
KeiiEngine/game/- shaders/incomplete/: shader_program_CubeMapConvolution.glsl  shader_program_PBR-IBL.glsl
KeiiEngine/game/- shaders/skybox/: skybox_shader.glsl
KeiiEngine/resources/: shaderprogram.txt
KeiiEngine/src/engine/: Component.cpp  Component.h  Core.cpp  Core.h  Debugger.cpp  Debugger.h  Debugging.cpp  Debugging.h  Entity.cpp  Entity.h  Enviroment.h  InputManager.cpp  InputManager.h  Inputs.cpp  Inputs.h  KeiiEngine.h  Scene.cpp  Scene.h  SystemIndexer.cpp  SystemIndexer.h  Time.cpp  Time.h  TimeManager.cpp  TimeManager.h  core.cpp  core.h  entity.cpp  entity.h  main.cpp
KeiiEngine/src/engine/audio/: AudioBuffer.cpp  AudioBuffer.h  AudioManager.cpp  AudioManager.h
KeiiEngine/src/engine/components/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Gizmo.cpp  Gizmo.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  ReflectionProbe.cpp  ReflectionProbe.h  RigidBody.h  Transform.cpp  Transform.h
KeiiEngine/src/engine/engine-maths/: Maths.cpp  Maths.h
KeiiEngine/src/engine/error-handling/: Debugger.cpp  Debugger.h  Exception.cpp  Exception.h
KeiiEngine/src/engine/graphics/: GraphicsManager.cpp  GraphicsManager.h  PolygonMaterialGroup.cpp  PolygonMaterialGroup.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
KeiiEngine/src/engine/input/: InputManager.cpp  InputManager.h  Inputs.cpp  Inputs.h
KeiiEngine/src/engine/physics/: PhysicsManager.cpp  PhysicsManager.h
KeiiEngine/src/engine/resources/: AudioClip.cpp  AudioClip.h  Material.cpp  Material.h  Model.cpp  Model.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SkyboxMaterial.cpp  SkyboxMaterial.h  Sound.h  Texture.cpp  Texture.h  TextureCubeMap.cpp  TextureCubeMap.h
KeiiEngine/src/engine/time/: TimeManager.cpp  TimeManager.h
KeiiEngine/src/game/: CustomScene.cpp  CustomScene.h  Main.cpp
KeiiEngine/src/game/components/: CameraController.cpp  CameraController.h  PlayerController.cpp  PlayerController.h  PostProcessorEffects.cpp  PostProcessorEffects.h  Rocket.cpp  Rocket.h  Rotator.cpp  Rotator.h  SceneSwitcher.cpp  SceneSwitcher.h  ShaderTextureSampler.cpp  ShaderTextureSampler.h
KeiiEngine/src/game/scenes/: Scene_1.cpp  Scene_1.h  Scene_2.cpp  Scene_2.h  Scene_3.cpp  Scene_3.h
(+384 files in other folders)
